# G4LumaCam

./: .gitignore  .gitmodules  README.md  setup.py
macros/thermal_neutrons/: README.md  fe_bragg_edge.mac  fe_monochromatic_05A.mac  fe_monochromatic_8A.mac
notebooks/: Bragg_edges.ipynb
src/G4LumaCam/: CMakeLists.txt  EventProcessor.cc  GeometryConstructor.cc  GeometryConstructor.hh  LumaCamMessenger.cc  LumaCamMessenger.hh  MaterialBuilder.cc  MaterialBuilder.hh  SimConfig.cc  SimConfig.hh  main.cc
src/lumacam/: analysis.py  optics.py  simulate.py
src/lumacam/config/: empir_params.py
